@@ -1,3 +1,8 @@
+2011-09-20  John D. Ramsdell  <ramsdell@mitre.org>
+
+	* datalog.spec.in (Release): Removed devel packages and bumped
+	release number to 2.
+
 2011-07-05  John D. Ramsdell  <ramsdell@mitre.org>
 
 	* CVS: Tagged as datalog-1_6.
